--- a/tests/test_uses/with_bad_test_dep/pkg.yaml
+++ b/tests/test_uses/with_bad_test_dep/pkg.yaml
@@ -3,8 +3,8 @@
     "namespace": "test1",
     "version": "0.0.0",
     "depends": [
-        // This dependency cannot compile. We will therefore fail to build
-        // if we build with tests
+        # This dependency cannot compile. We will therefore fail to build
+        # if we build with tests
         "unbuildable@0.0.0 uses fails_to_build for test"
     ]
 }
