Update neo-fun and pubgrub

--- a/package.jsonc
+++ b/package.jsonc
@@ -9,12 +9,12 @@
         "range-v3@0.11.0",
         "nlohmann-json@3.9.1",
         "neo-sqlite3@0.7.1",
-        "neo-fun^0.11.0",
+        "neo-fun^0.11.1",
         "neo-buffer^0.5.1",
         "neo-compress^0.3.1",
         "neo-url^0.2.5",
         "semver@0.2.2",
-        "pubgrub@0.3.0",
+        "pubgrub^0.3.1",
         "vob-json5@0.1.6",
         "vob-semester@0.3.1",
         "ctre@2.8.1",
