--- a/tests/test_uses/dependents/basic_test_dependent/pkg.yaml
+++ b/tests/test_uses/dependents/basic_test_dependent/pkg.yaml
@@ -1,6 +1,3 @@
-{
-    name: 'test',
-    namespace: 'test',
-    version: '0.0.0',
-    depends: ['the_test_lib@0.0.0 for test']
-}
+name: "test"
+version: "0.0.0"
+depends: ["the_test_lib@0.0.0 for test"]
