--- a/tests/test_uses/dependents/test_depends_but_regular_uses/pkg.yaml
+++ b/tests/test_uses/dependents/test_depends_but_regular_uses/pkg.yaml
@@ -1,8 +1,3 @@
-{
-    name: 'test',
-    namespace: 'test',
-    version: '0.0.0',
-    depends: [
-        {dep: 'the_test_lib@0.0.0', for: 'test'}
-    ]
-}
+name: "test"
+version: "0.0.0"
+depends: [{ dep: "the_test_lib@0.0.0", for: "test" }]
