--- a/tests/test_uses/the_test_lib/pkg.yaml
+++ b/tests/test_uses/the_test_lib/pkg.yaml
@@ -1,6 +1,3 @@
-{
-    name: 'the_test_lib',
-    namespace: 'dds',
-    version: '0.0.0',
-    depends: ['the_test_dependency@0.0.0 uses the_test_dependency for test'],
-}
+name: "the_test_lib"
+version: "0.0.0"
+depends: ["the_test_dependency@0.0.0 uses the_test_dependency for test"]
