--- a/tests/test_uses/with_transitive_bad_test_dep/pkg.yaml
+++ b/tests/test_uses/with_transitive_bad_test_dep/pkg.yaml
@@ -1,7 +1,7 @@
 {
     "name": "uses-bad-dep",
     "version": "0.0.0",
-    "depends": [
+    "dependencies": [
         {
             # This dependency's testdependency cannot compile. We will therefore
             # fail to build if we try to build its tests. Since DDS should not try
