--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,17 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.7"
 
 semver = "^2.13.0"
 pytest = "^6.1.2"
 pytest-xdist = "^2.1.0"
 pytest-asyncio = "^0.14.0"
-typing-extensions = "^3.7.4"
+typing-extensions = "^4.0.1"
 json5 = "^0.9.5"
 distro = "^1.5.0"
+dagon = "^0.9.1"
+importlib-metadata = "^4.10.0"
 
 [tool.poetry.dev-dependencies]
 # Only needed for development
@@ -31,6 +33,7 @@ Sphinx = "^3.4.1"
 dds-ci = "dds_ci.main:start"
 dds-format = "dds_ci.format:start"
 gen-msvs-vsc-task = "dds_ci.msvs:generate_vsc_task"
+dds-audit-docrefs = "dds_ci.docs:audit_docrefs_main"
 
 [build-system]
 requires = ["poetry>=0.12"]
