--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,9 @@ stages:
         pool:
           vmImage: windows-2019
         steps:
+          - task: UsePythonVersion@0
+            inputs:
+              versionSpec: 3.8
           - pwsh: tools\get-win-openssl.ps1
             displayName: Get OpenSSL for Windows
           - script: python -m pip install poetry && poetry install --no-dev
