--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,10 +31,16 @@ Sphinx = "^3.4.1"
 
 [tool.poetry.scripts]
 dds-ci = "dds_ci.main:start"
-dds-format = "dds_ci.format:start"
 gen-msvs-vsc-task = "dds_ci.msvs:generate_vsc_task"
 dds-audit-docrefs = "dds_ci.docs:audit_docrefs_main"
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.pyright]
+include = ["tools/**"]
+typeCheckingMode = "strict"
+useLibraryCodeForTypes = true
+reportMissingTypeStubs = false
+reportMissingImports = true
