--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,11 +22,11 @@ dagon = "^0.9.3"
 importlib-metadata = "^4.10.0"
 yapf = "^0.32.0"
 pylint = "^2.12.2"
-Sphinx = "^3.4.1"
+Sphinx = "^4.4.0"
+pyright = "^1.1.227"
 
 [tool.poetry.dev-dependencies]
 # Only needed for development
-mypy = "^0.790"
 rope = "^0.18.0"
 
 [tool.poetry.scripts]
