Remove 'usage kind' for CRS packages and projects.
Now a package has separate test-using and test-dependencies.
These are far simpler to resolve and understand externally.

--- a/tests/test_uses/dependents/multi_lib_dependent/pkg.yaml
+++ b/tests/test_uses/dependents/multi_lib_dependent/pkg.yaml
@@ -6,4 +6,4 @@ libs:
     dependencies: ["the_test_lib@0.0.0"]
   - path: "libs/uses_for_tests"
     name: "uses_for_tests"
-    dependencies: ["the_test_lib@0.0.0 for test"]
+    test-dependencies: ["the_test_lib@0.0.0 using the_test_lib"]
