--- a/tests/test_uses/dependents/basic_test_dependent/pkg.yaml
+++ b/tests/test_uses/dependents/basic_test_dependent/pkg.yaml
@@ -1,3 +1,3 @@
 name: "test"
 version: "0.0.0"
-dependencies: ["the_test_lib@0.0.0 for test"]
+test-dependencies: ["the_test_lib@0.0.0 using the_test_lib"]
