--- a/tests/test_uses/with_bad_test_dep/pkg.yaml
+++ b/tests/test_uses/with_bad_test_dep/pkg.yaml
@@ -1,9 +1,10 @@
+# prettier-ignore
 {
     "name": "with_bad_test_dep",
     "version": "0.0.0",
-    "dependencies": [
+    "test-dependencies": [
         # This dependency cannot compile. We will therefore fail to build
         # if we build with tests
-        "unbuildable@0.0.0 using fails_to_build for test"
+        "unbuildable@0.0.0 using fails_to_build"
     ]
 }
