--- a/tests/use-spdlog/project/pkg.yaml
+++ b/tests/use-spdlog/project/pkg.yaml
@@ -1,5 +1,5 @@
 {
     "name": "test",
     "version": "0.0.0",
-    "dependencies": ["spdlog@1.4.2 using spdlog for lib"],
+    "dependencies": ["spdlog@1.4.2 using spdlog"],
 }
