--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["vector-of-bool <vectorofbool@gmail.com>"]
 license = "MPL-2.0"
 packages = [
-    { include = "dds_ci", from = "tools/" },
+    { include = "bpt_ci", from = "tools/" },
 ]
 
 [tool.poetry.dependencies]
@@ -35,8 +35,8 @@ rope = "^0.18.0"
 sphinx-autobuild = "^2021.3.14"
 
 [tool.poetry.scripts]
-gen-msvs-vsc-task = "dds_ci.msvs:generate_vsc_task"
-bpt-audit-docrefs = "dds_ci.docs:audit_docrefs_main"
+gen-msvs-vsc-task = "bpt_ci.msvs:generate_vsc_task"
+bpt-audit-docrefs = "bpt_ci.docs:audit_docrefs_main"
 
 [build-system]
 requires = ["poetry>=0.12"]
