--- a/tests/colliding_libs_objects/proj-exec/bpt.yaml
+++ b/tests/colliding_libs_objects/proj-exec/bpt.yaml
@@ -1,14 +1,9 @@
 {
     "name": "testing",
     "version": "1.2.3",
-    "libs": [
-        {
-            "path": "libs/hello",
-            "name": "hello"
-        },
-        {
-            "path": "libs/hello2",
-            "name": "hello2"
-        }
-    ]
+    "libraries":
+        [
+            { "path": "libs/hello", "name": "hello" },
+            { "path": "libs/hello2", "name": "hello2" },
+        ],
 }
