--- a/tests/test_uses/unbuildable/bpt.yaml
+++ b/tests/test_uses/unbuildable/bpt.yaml
@@ -1,7 +1,5 @@
 {
-    name: 'unbuildable',
-    version: '0.0.0',
-    lib: {
-        name: "fails_to_build"
-    }
+  name: "unbuildable",
+  version: "0.0.0",
+  libraries: [{ name: "fails_to_build", path: . }],
 }
