--- a/data/projects/simple/bpt.yaml
+++ b/data/projects/simple/bpt.yaml
@@ -1,7 +1,9 @@
+# prettier-ignore
 {
     "name": "simple",
     "version": "1.2.3",
-    "lib": {
-        "name": "simple"
-    }
+    "libraries": [{
+        "name": "simple",
+        "path": "."
+    }],
 }
