Use LTO on the static Linux build

--- a/tools/gcc-10-static-rel.jsonc
+++ b/tools/gcc-10-static-rel.jsonc
@@ -13,13 +13,15 @@
     "flags": [
         "-fdata-sections",
         "-ffunction-sections",
-        "-Os"
+        "-Os",
+        "-flto",
     ],
     "link_flags": [
         "-static",
         "-l:libssl.a",
         "-l:libcrypto.a",
         "-ldl",
+        "-flto=auto",
         // WORKAROUND: https://sourceware.org/legacy-ml/glibc-bugs/2018-09/msg00009.html
         "-Wl,-u,pthread_mutex_lock,-u,pthread_mutex_unlock,-u,pthread_self",
         "-Wl,--gc-sections,--strip-all"
